--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../styles/components/flip.webp');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../components/flip.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
